--- a/需求/人员分析.md
+++ b/需求/人员分析.md
@@ -2,7 +2,7 @@
 
 在 data 的文件夹里有 phone_master_index 的数据
 这份数据从人的角度对分析了人与事件之间的关联
-展示列表，列表中展示如下字段
+展示列表，列表中展示如下字段，列表按照event_count倒序进行排列
     字段解释
         phone 手机号码
         name 姓名
@@ -16,8 +16,3 @@
 详情里展示这个人关联的事件列表
 
 事件按照时间线的方式进行展示（展示的方式同聚合页面的形式）
-
-
-
-
-
